--- a/Plantilla treball/main.tex
+++ b/Plantilla treball/main.tex
@@ -10,6 +10,8 @@
 \usepackage[catalan]{babel}
 \usepackage[fixlanguage]{babelbib}
 \selectbiblanguage{catalan}
+% \usepackage[style=trad-abbrv, maxbibnames=2]{biblatex}
+% \addbibresource{bibliography.bib}
 
 % Sectioning layout
 \addtokomafont{sectioning}{\normalfont\scshape}
@@ -319,6 +321,13 @@
 
 \bibliographystyle{bababbrv-lf}
 \bibliography{bibliografia}
+
+% \setcounter{secnumdepth}{0}
+% \section{Bibliography}
+% \printbibliography[title={Online}, keyword=web, heading=subbibliography]
+% \printbibliography[title={Basic}, keyword=basic, heading=subbibliography]
+% \printbibliography[title={Avanced}, keyword=advanced, heading=subbibliography]
+% \nocite{b:harwit}
 
 %-----------------------------------------------------------------
 \end{document}
