/ ‘Plantilla treball/main.tex’

--- a/Plantilla treball/main.tex
+++ b/Plantilla treball/main.tex
@@ -315,19 +315,17 @@
 \include{./content/body}
 
 %-----------------------------------------------------------------
-%	BIBLIOGRAFIA
+%	BIBLIOGRAPHY
 %-----------------------------------------------------------------
-% \nocite{a:}
+% \nocite{b:}
 
-\bibliographystyle{bababbrv-lf}
-\bibliography{bibliografia}
+\printbibliography
 
 % \setcounter{secnumdepth}{0}
-% \section{Bibliography}
-% \printbibliography[title={Online}, keyword=web, heading=subbibliography]
-% \printbibliography[title={Basic}, keyword=basic, heading=subbibliography]
-% \printbibliography[title={Avanced}, keyword=advanced, heading=subbibliography]
-% \nocite{b:harwit}
+% \section{Bibliografia}
+% \printbibliography[title={En línia}, keyword=web, heading=subbibliography]
+% \printbibliography[title={Bàsica}, keyword=basic, heading=subbibliography]
+% \printbibliography[title={Avançada}, keyword=advanced, heading=subbibliography]
 
 %-----------------------------------------------------------------
 \end{document}
