/ ‘Plantilla informe labortatori/main.tex’

--- a/Plantilla informe labortatori/main.tex
+++ b/Plantilla informe labortatori/main.tex
@@ -309,4 +309,18 @@
 % \addcontentsline{toc}{part}{Annexos}
 	\include{./contents/A-incerteses}
 
+%-----------------------------------------------------------------
+%	BIBLIOGRAPHY
+%-----------------------------------------------------------------
+% \nocite{b:}
+
+% \printbibliography
+
+% \setcounter{secnumdepth}{0}
+% \section{Bibliografia}
+% \printbibliography[title={En línia}, keyword=web, heading=subbibliography]
+% \printbibliography[title={Bàsica}, keyword=basic, heading=subbibliography]
+% \printbibliography[title={Avançada}, keyword=advanced, heading=subbibliography]
+
+%-----------------------------------------------------------------
 \end{document}
