/ ‘Plantilla informe labortatori/main.tex’ / ‘Plantilla treball/main.tex’

--- a/Plantilla informe labortatori/main.tex
+++ b/Plantilla informe labortatori/main.tex
@@ -8,8 +8,10 @@
 \usepackage{slantsc}
 \usepackage{microtype}
 \usepackage[catalan]{babel}
-\usepackage[fixlanguage]{babelbib}
-\selectbiblanguage{catalan}
+
+% Bibliography
+\usepackage[style=trad-abbrv, maxbibnames=5]{biblatex}
+\bibliography{bibliography}
 
 % Sectioning layout
 \addtokomafont{sectioning}{\normalfont\scshape}
