--- a/Plantilla treball/main.tex
+++ b/Plantilla treball/main.tex
@@ -8,10 +8,10 @@
 \usepackage{slantsc}
 \usepackage{microtype}
 \usepackage[catalan]{babel}
-\usepackage[fixlanguage]{babelbib}
-\selectbiblanguage{catalan}
-% \usepackage[style=trad-abbrv, maxbibnames=2]{biblatex}
-% \addbibresource{bibliography.bib}
+
+% Bibliography
+\usepackage[style=trad-abbrv, maxbibnames=5]{biblatex}
+\bibliography{bibliography}
 
 % Sectioning layout
 \addtokomafont{sectioning}{\normalfont\scshape}
