--- a/Plantilla apunts/main.tex
+++ b/Plantilla apunts/main.tex
@@ -8,10 +8,10 @@
 \usepackage{slantsc}
 \usepackage{microtype}
 \usepackage[catalan]{babel}
-\usepackage[fixlanguage]{babelbib}
-\selectbiblanguage{catalan}
-% \usepackage[style=trad-abbrv, maxbibnames=2]{biblatex}
-% \addbibresource{bibliography.bib}
+
+% Bibliography
+\usepackage[style=trad-abbrv, maxbibnames=5]{biblatex}
+\bibliography{bibliography}
 
 % Sectioning layout
 \addtokomafont{sectioning}{\normalfont\scshape}
@@ -323,18 +323,17 @@
 \include{./contents/4-}
 
 %-----------------------------------------------------------------
-%	BIBLIOGRAFIA
+%	BIBLIOGRAPHY
 %-----------------------------------------------------------------
-% \nocite{a:}
+% \nocite{b:}
 
-\bibliographystyle{bababbrv-lf}
-\bibliography{bibliografia}
+\printbibliography
 
 % \setcounter{secnumdepth}{0}
-% \section{Bibliography}
-% \printbibliography[title={Online}, keyword=web, heading=subbibliography]
-% \printbibliography[title={Basic}, keyword=basic, heading=subbibliography]
-% \printbibliography[title={Avanced}, keyword=advanced, heading=subbibliography]
-% \nocite{b:harwit}
+% \section{Bibliografia}
+% \printbibliography[title={En línia}, keyword=web, heading=subbibliography]
+% \printbibliography[title={Bàsica}, keyword=basic, heading=subbibliography]
+% \printbibliography[title={Avançada}, keyword=advanced, heading=subbibliography]
 
+%-----------------------------------------------------------------
 \end{document}
