--- a/Plantilla informe labortatori/main.tex
+++ b/Plantilla informe labortatori/main.tex
@@ -11,7 +11,7 @@
 
 % Bibliography
 \usepackage[style=trad-abbrv, maxbibnames=5]{biblatex}
-\bibliography{bibliography}
+\bibliography{bibliografia}
 
 % Sectioning layout
 \addtokomafont{sectioning}{\normalfont\scshape}
