--- a/Plantilla entrega/main.tex
+++ b/Plantilla entrega/main.tex
@@ -249,7 +249,7 @@
 %-----------------------------------------------------------------
 %	PDF INFO AND HYPERREF
 %-----------------------------------------------------------------
-\usepackage{hyperref}
+\usepackage[hypertexnames=false]{hyperref}
 \hypersetup{colorlinks, citecolor=black, filecolor=black, linkcolor=black, urlcolor=black}
 \usepackage{cleveref}
 	\crefname{section}{\S}{\SS}
