/ ‘Plantilla informe labortatori/main.tex’

--- a/Plantilla informe labortatori/main.tex
+++ b/Plantilla informe labortatori/main.tex
@@ -107,6 +107,10 @@
 % Shorter displaystyle
 \newcommand*{\dsp}{\displaystyle}
 
+% Inexact differential
+\newcommand{\dbar}{\mathchar'26\mkern-12mu\mathrm{d}}
+\newcommand{\indd}[1]{\dbar{#1}}
+
 % Arrows with text and cancels for developments
 \newcommand{\tikzmark}[1]{\tikz[overlay,remember picture] \node (#1) {};}
 \tikzset{square arrow/.style={to path={-- ++(0,-.25) -| (\tikztotarget)}}}
