--- a/Plantilla portada/main.tex
+++ b/Plantilla portada/main.tex
@@ -89,7 +89,7 @@
 
 \newcommand*{\mytitle}{Òptica}
 \newcommand*{\mysubtitle}{Transparències}
-\newcommand*{\myauthor}{Juan Campos Coloma}
+\newcommand*{\myauthor}{John Smith}
 \newcommand*{\myuni}{Universitat Autònoma de Barcelona, Departament de Física}
 % \newcommand*{\mydate}{\normalsize \today}
 \newcommand*{\mydate}{\normalsize 2015-2016}
