--- a/Plantilla apunts/template.tex
+++ b/Plantilla apunts/template.tex
@@ -1,33 +1,39 @@
 %-----------------------------------------------------------------
-%	TEMA
+%	SECTION
 %	!TEX root = ./../main.tex
 %-----------------------------------------------------------------
-\section{Tema 1}
-\subsection{Apartat 1}
+\section{Section 1}
+\subsection{Subsection 1.1}
 
 %-----------------------------------------------------------------
-\subsection{Apartat 2}
+%	PLACEHOLDER FIGURE
+%-----------------------------------------------------------------
+\begin{figure}[h]
+	\centering
+	% \includegraphics[width=\textwidth]{./images/}
+	\textcolor{gray}{\rule{8cm}{4cm}}
+	\caption{Caption}
+	\label{fig:}
+\end{figure}
 
 %-----------------------------------------------------------------
-\subsection{Apartat 3}
-
+%	TABLES
 %-----------------------------------------------------------------
 \begin{table}[H]
 	\centering
-	\begin{tabular}{l c c c}
+	\begin{tabular}{l c c}
 		\toprule
 		\toprule
-		& \multicolumn{3}{c}{Velocitat angular (\si{\radian\per\s})} \\
-		\cmidrule(l){2-4}
-		Posició de la bola & $R_{1}$ (\SI{7.5}{\cm}) & $R_{2}$ (\SI{5}{\cm}) & $R_{3}$ (\SI{2.5}{\cm}) \\
+		& \multicolumn{2}{c}{From two to three} \\
+		\cmidrule(l){2-3}
+		Title 1 & Title 2 & Title 3 \\
 		\midrule
-		Pos. 1 ($v = \SI{1.38}{\m\per\s}$) & \num{0.93 \pm 0.02} & \num{0.63 \pm 0.02} & \num{0.31 \pm 0.03} \\
-		Pos. 2 ($v = \SI{1.14}{\m\per\s}$) & \num{0.77 \pm 0.03} & \num{0.47 \pm 0.03} & \num{0.23 \pm 0.02} \\
-		Pos. 3 ($v = \SI{0.82}{\m\per\s}$) & \num{0.56 \pm 0.02} & \num{0.37 \pm 0.03} & \num{0.10 \pm 0.03} \\
+		Something & Somthing else & Blah \\
+		Something & Somthing else & Blah \\
 		\bottomrule
 	\end{tabular}
-	\caption{Velocitats experimentals de la bola per alçades i posicions diferents}
-	\label{tab:vel-bola-exp}
+	\caption{Caption}
+	\label{tab:}
 \end{table}
 
 %-----------------------------------------------------------------
@@ -35,27 +41,12 @@
 	\centering
 	\begin{tabularx}{0.9\textwidth}{cX}
 		\toprule
-		Longitud d'ona & Objecte característic \\
+		Title 1 & Title 2 \\
 		\midrule
-		Raig Gamma & Objectes compactes en col·lisió (estrelles de neutrons, ...)? \\
-		Raig $X$ & Estrelles de neutrons \\
-		Ultraviolat & Estrelles calents, quàsars \\
-		Visible & Estrelles \\
-		Infraroig & Gegants vermelles, nuclis galàctics \\
-		IR llunyà & Protoestrelles, pols estel·lar, planetes \\
-		Mil·límetre & Pols fred, núvols mol·leculars \\
-		Ràdio de \si{\cm} & Línia H I de \SI{21}{\cm}, púlsars \\
+		Something & Very very very very very very very very very very very very very long text \\
+		Something $X$ & Short text \\
 		\bottomrule
 	\end{tabularx}
-	\caption{Comparació dels fenòmens característics que són estudiats a diferents longituds d'ona}
-	\label{tab:wavelenghts}
-\end{table}
-
-%-----------------------------------------------------------------
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=\textwidth]{./images/}
-	% \textcolor{gray}{\rule{8cm}{4cm}}
 	\caption{Caption}
-	\label{fig:}
-\end{figure}
+	\label{tab:}
+\end{table}
